; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_fan.c_nouveau_therm_fan_set_defaults.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_fan.c_nouveau_therm_fan_set_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_therm = type { i32 }
%struct.nouveau_therm_priv = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_therm*)* @nouveau_therm_fan_set_defaults to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nouveau_therm_fan_set_defaults(%struct.nouveau_therm* %0) #0 {
  %2 = alloca %struct.nouveau_therm*, align 8
  %3 = alloca %struct.nouveau_therm_priv*, align 8
  store %struct.nouveau_therm* %0, %struct.nouveau_therm** %2, align 8
  %4 = load %struct.nouveau_therm*, %struct.nouveau_therm** %2, align 8
  %5 = bitcast %struct.nouveau_therm* %4 to i8*
  %6 = bitcast i8* %5 to %struct.nouveau_therm_priv*
  store %struct.nouveau_therm_priv* %6, %struct.nouveau_therm_priv** %3, align 8
  %7 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %8 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 6
  store i64 0, i64* %11, align 8
  %12 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %13 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 5
  store i64 0, i64* %16, align 8
  %17 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %18 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %17, i32 0, i32 0
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32 100, i32* %21, align 8
  %22 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %23 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %22, i32 0, i32 0
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  store i32 500, i32* %26, align 4
  %27 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %28 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 2
  store i32 2000, i32* %31, align 8
  %32 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %33 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %32, i32 0, i32 0
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 3
  store i32 40, i32* %36, align 4
  %37 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %3, align 8
  %38 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %37, i32 0, i32 0
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 4
  store i32 85, i32* %41, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
